--- a/css/components/shopping-cart.css
+++ b/css/components/shopping-cart.css
@@ -1,15 +1,26 @@
 /* ************** Components ************* */
 
-
-/* table */
+/*? **** Table Shopping Cart MOVIL **** ¿*/
+.table-shopping-cart {
+    width: 100%;
+    height: 90%;
+    padding: 0 1rem;
+    box-sizing: border-box;
+    background-color: var(--third-color);
+    overflow-x: auto;
+}
 
 .table-cart {
     width: 100%;
+    /* height: 100%; */
     font-size: 0.75rem;
 }
 
-.table-cart__header {
+thead {
     display: none;
+}
+
+.table-cart__header {
     position: sticky;
     top: 0;
     left: 0;
@@ -17,27 +28,44 @@
 }
 
 .table-cart,
-.table-cart__header,
 .table-cart__data {
-    padding: 0.5rem;
     text-align: left;
 }
 
+.table-cart__data {
+    padding: 0.5rem 0 0.5rem 0;
+}
+
 .table-cart__row-content {
+    width: 100%;
     border-bottom: 1px solid rgb(190, 190, 190);
 }
 
 .table-cart__row-content .table-cart__data:last-child,
 .table-cart__row-content .table-cart__data:nth-last-child(3) {
     display: none;
-
 }
 
-/* .table-cart__body .table-cart__row-content:hover {
-    background-color: var(--first-color);
-} */
+tfoot {
+    display: flex;
+}
 
-.table-cart__data {}
+.table-cart__footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    justify-content: center;
+    width: 100%;
+    padding-bottom: 1rem;
+}
+
+.go-to-pay-btn {
+    width: 90vw;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
 .table-cart__img {
     width: 64px;
@@ -53,39 +81,8 @@
 }
 
 .table-cart__quantity {
+    width: fit-content;
     font-size: 1rem;
-}
-
-/* ************** Utilities ************** */
-
-/* ************* Site Styles ************* */
-.header-cart {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    padding: 1rem 1rem;
-    height: 15vh;
-}
-
-.header-cart__icon {
-    align-self: flex-start;
-    font-size: 2.5rem;
-}
-
-.header-cart__title {
-    align-self: center;
-}
-
-/* table */
-
-.table-shopping-cart {
-    max-width: 100%;
-    height: 60vh;
-    padding: 0 1rem;
-    /* margin: 0.5rem auto; */
-    box-sizing: border-box;
-    background-color: var(--third-color);
-    overflow-x: auto;
 }
 
 .table-shopping-cart::-webkit-scrollbar {
@@ -103,16 +100,112 @@
     visibility: visible;
 }
 
-/* table */
+/* ************** Utilities ************** */
 
-.purchase-data-cart {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    padding: 1rem 1rem;
-    height: 20vh;
+/* ************* Site Styles ************* */
+
+.main-cart {
+    height: 100vh;
 }
 
-.purchase-data-cart__pay-btn {}
+.header-cart {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+    /* padding: 1rem 1rem; */
+    height: 10%;
+}
+
+.header-cart__icon {
+    align-self: flex-start;
+    font-size: 2.5rem;
+}
+
+.header-cart__title {
+    margin: 0;
+    /* align-self: center; */
+}
+
 
 /* ************ Media Queries ************ */
+
+@media screen and (min-width: 1024px) {
+
+
+    /*? **** Table Shopping Cart DESKTOP **** ¿*/
+    .table-cart {
+        width: 50vw;
+        /* height: 100%; */
+    }
+
+    thead {
+        display: table-header-group;
+    }
+
+    tbody tr:first-child td {
+        padding-top: 1rem;
+    }
+
+    .table-cart__body {
+        overflow: auto;
+        /* Permite el desplazamiento */
+        max-height: 300px;
+        /* Altura máxima antes de desplazarse */
+    }
+
+    .table-cart__header tr:first-child th:first-child {
+        border-top-left-radius: 0.5rem;
+        border-bottom-left-radius: 0.5rem;
+    }
+
+    .table-cart__header tr:first-child th:last-child {
+        border-top-right-radius: 0.5rem;
+        border-bottom-right-radius: 0.5rem;
+    }
+
+    .table-cart__title-header {
+        padding: 0.5rem;
+        text-align: center;
+    }
+
+    .table-cart__row-content .table-cart__data:last-child,
+    .table-cart__row-content .table-cart__data:nth-last-child(3) {
+        display: table-cell;
+    }
+
+    .table-cart__data {
+        text-align: center;
+    }
+
+    .table-cart__data--hidden {
+        display: table-cell;
+        background-color: var(--third-color);
+    }
+
+    .table-cart__img,
+    .table-cart__quantity {
+        margin: 0 auto;
+    }
+
+    .price-by-unit {
+        display: none;
+    }
+
+    tfoot {
+        display: table-footer-group;
+    }
+
+    .table-cart__footer {
+        position: sticky;
+        bottom: 0;
+    }
+
+    .table-cart__footer td {
+        padding-top: 0.5rem;
+    }
+
+    .go-to-pay-btn {
+        width: unset;
+    }
+}
