--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,13 @@
 
 @font-face {
     font-family: Libre-Franklin;
+    src: url(../assets/fonts/LibreFranklin-LightItalic.ttf);
+    font-weight: 300;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: Libre-Franklin;
     src: url(../assets/fonts/LibreFranklin-SemiBoldItalic.ttf);
     font-weight: 600;
     font-style: italic;
@@ -303,7 +310,9 @@ svg {
     justify-content: center;
     align-items: center;
     opacity: 0;
+    /* opacity: 1; */
     pointer-events: none;
+    /* pointer-events: all; */
     background-color: var(--black-alpha-color);
     overflow-y: hidden;
 }
@@ -358,7 +367,6 @@ svg {
     box-shadow: 0px 2px 13px 2px rgba(30, 30, 30, 0.62);
 }
 
-
 .card__header {
     width: 100%;
     height: 240px;
@@ -375,8 +383,7 @@ svg {
 
 .card__header,
 .card__img {
-    border-top-left-radius: 1rem;
-    border-top-right-radius: 1rem;
+    border-radius: 1rem 1rem 0 0;
 }
 
 .card:hover .card__img {
@@ -487,14 +494,19 @@ svg {
     height: 45%;
     top: 50%;
     gap: 1rem;
-    justify-content: center;
+    justify-content: space-between;
     background-color: var(--third-color);
-    border-top-left-radius: 3rem;
-    border-top-right-radius: 3rem;
+    border-radius: 3rem 3rem 0 0;
+    padding-top: 1.5rem;
 }
 
 .modal-card__header {
     height: 60%;
+}
+
+.modal-card__body-section-start {
+    display: flex;
+    justify-content: space-between;
 }
 
 .modal-card__description {
@@ -512,19 +524,35 @@ svg {
     order: 2;
 }
 
-/* 
-.modal-card__add-cart-text-btn {
-    order: 3;
-} */
+.modal-card__description {
+    overflow: visible;
+}
 
-/* .modal-card__add-cart-text-btn .link_to_btn {
-    padding: 0.75rem 0.5rem;
-} */
+.customize-purchase,
+.no-ingredient {
+    display: flex;
+    justify-content: space-between;
+}
+
+.customize-purchase {
+    height: 100%;
+    flex: 1;
+    overflow-y: auto;
+    flex-direction: column;
+    gap: 1rem;
+}
 
 .modal-card__cart-btn {
     display: flex;
-    gap: 1rem;
-    justify-content: center;
+    /* gap: 1rem; */
+    justify-content: space-between;
+}
+
+.modal-card__cart-btn a {
+    display: flex;
+    width: 45%;
+    align-items: center;
+    justify-content: space-between;
 }
 
 /*? ********** Slider Products ********** ¿*/
@@ -719,6 +747,19 @@ svg {
 
 .section_padding {
     padding: 2rem 1rem;
+}
+
+.section__paragraph {
+    font-weight: 200;
+    font-style: normal;
+    color: var(--third-color);
+    text-align: center;
+}
+
+.section__title--white {
+    color: var(--third-color);
+    text-align: center;
+    font-size: 2rem;
 }
 
 .icons {
@@ -952,18 +993,11 @@ svg {
     padding: 1rem;
 }
 
-.about .section__title {
+/* .about .section__title {
     color: var(--third-color);
     text-align: center;
     font-size: 2rem;
-}
-
-.about__paragraph {
-    font-weight: 200;
-    font-style: normal;
-    color: var(--third-color);
-    text-align: center;
-}
+} */
 
 /*? ********** Contact ********** ¿*/
 
@@ -1154,6 +1188,31 @@ svg {
     .products.section_padding {
         padding-top: calc(var(--header-height) - 0.5rem);
         padding-bottom: 0;
+    }
+
+    /* ************ Card Modal Desktop ************ */
+
+    .modal-card__content {
+        width: 50%;
+        height: 95%;
+        border-radius: 3rem;
+    }
+
+    .modal-card__header {
+        border-radius: 3rem 3rem 0 0;
+    }
+
+    .modal-card__body {
+        padding: 1.5rem 1.5rem 1rem 1.5rem;
+        border-radius: 3rem;
+    }
+
+    .modal-card__cart-btn {
+        justify-content: space-evenly;
+    }
+
+    .modal-card__cart-btn a {
+        width: 25%;
     }
 
     /* ************ Slider Products ************ */
